--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,16 +2,16 @@
 <resources>
 
     <string name="app_name">家长帮</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world"> </string>
     <string name="action_settings">Settings</string>
 
     <string-array name="classes">
-        <item>一年级</item>
-        <item>二年级</item>
-        <item>三年级</item>
-        <item>四年级</item>
-        <item>五年级</item>
-        <item>六年级</item>
+        <item>1年级</item>
+        <item>2年级</item>
+        <item>3年级</item>
+        <item>4年级</item>
+        <item>5年级</item>
+        <item>6年级</item>
     </string-array>
 
 </resources>
