--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">家长帮</string>
-    <string name="hello_world"> </string>
+    <string name="hello_world">asdf</string>
     <string name="action_settings">Settings</string>
 
     <string-array name="classes">
