--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">家长帮</string>
     <string name="hello_world">asdf</string>
     <string name="action_settings">Settings</string>
-
+    <string name="empty_string"></string>
+	
     <string-array name="classes">
         <item>1年级</item>
         <item>2年级</item>
